tests/ui/feature-gates/feature-gate-intrinsics.stderr
error[E0658]: the extern "rust-intrinsic" ABI is an implementation detail and perma-unstable
  --> $DIR/feature-gate-intrinsics.rs:1:8
   |
LL | extern "rust-intrinsic" {
   |        ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "rust-intrinsic" ABI is an implementation detail and perma-unstable
  --> $DIR/feature-gate-intrinsics.rs:5:8
   |
LL | extern "rust-intrinsic" fn baz() {}
   |        ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(intrinsics)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0093]: unrecognized intrinsic function: `bar`
  --> $DIR/feature-gate-intrinsics.rs:2:5
   |
LL |     fn bar();
   |     ^^^^^^^^^ unrecognized intrinsic
   |
   = help: if you're adding an intrinsic, be sure to update `check_intrinsic_type`

error: intrinsic must be in `extern "rust-intrinsic" { ... }` block
  --> $DIR/feature-gate-intrinsics.rs:5:34
   |
LL | extern "rust-intrinsic" fn baz() {}
   |                                  ^^

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0093, E0658.
For more information about an error, try `rustc --explain E0093`.
